--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-cors": "^2.1.1",
+    "egg-scripts": "^2.5.0",
+    "egg-validate": "^2.0.1",
+    "egg-view-nunjucks": "^2.2.0",
+    "ethereumjs-tx": "^1.3.7",
+    "web3": "^0.20.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
