--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "egg-scripts": "^2.5.0",
     "egg-validate": "^2.0.1",
     "egg-view-nunjucks": "^2.2.0",
+    "ethereum-offline-sign": "^1.0.2",
     "ethereumjs-tx": "^1.3.7",
     "lodash": "^4.17.11",
     "web3": "^0.20.1"
